# pipeline_collab

./: .gitignore  main.py  pyproject.toml
notebooks/: extract_data.ipynb
src/: checkpoint_lote_1_pdf.parquet  main.py  processors.py  transform.py  vizualizador.py
src/Extract/: extract_data.py  extract_pdf.py  extract_table_list.py  extract_table_lists.py  extract_table_note.py  extract_table_notes.py  processors.py  utils.py
