[project]
name = "pipeline_collab"
version = "0.1.0"
description = "Pipeline for Prothesis Laboratory"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastparquet>=2026.5.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
]

[project.scripts]
pipeline_collab = "pipeline_collab.src:main"

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.uv]
package = true

